# antigravity

./: .ai_powerload.json  .cursorrules  .editorconfig  .env.template  .gitignore  .gitmodules  .version  AGENTS.md  AGENT_ASSIGNMENTS.md  AG_BRIEFING.md  ARCHITECTURE_MAP.md  BRANCH_STATUS.md  CLAUDE.md  Configure Slave Heltec.lnk  DEVICE_REGISTRY.md  FEATURE_LEDGER.md  Factory_USB_Flasher.bat  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  INFRASTRUCTURE_SETUP.md  KNOWLEDGE.md  MARKETING_BRIEF.md  MARKETING_PLAN_PROMPT.md  MCP23017.md  MULTI_AGENT_WORKFLOW.md  PHASE_50_TEST_QUICK_START.md  PROCESSES.md  README.md  README_AI.md  ROADMAP.md  STARTUP.md  START_ANTIGRAVITY.md  STATE_ASSESSMENT.md  Start_Loralink.bat  Start_Magic.bat  TEAM_PROCESS.md  VERIFICATION_PLAN.md  VERSIONING.md  WEBAPP.md  (+30 more)
tools/MetaClaw-main/benchmark/: TODO.md  pyproject.toml
tools/MetaClaw-main/benchmark/data-spec/: data-structure.md  design-plan.md  preferences.md  toolchain-spec.md
tools/MetaClaw-main/benchmark/data-synthesis/: bench_data_tools.py  fix_questions_eval_scripts.py  fix_session_format.py  fix_session_format_v2.py  strip_session_cwd.py
tools/MetaClaw-main/benchmark/docs/: CLI.md
tools/MetaClaw-main/benchmark/scripts/: baseline_run.py  build_small_subset.py  dummy_run.py  madmax_memory_run.py  memory_run.py  proxy_run.py  rl_only_memory_run.py  rl_only_run.py  rl_run.py  skills_memory_run.py  skills_only_run.py
tools/MetaClaw-main/benchmark/src/: __init__.py  cli.py  utils.py
tools/MetaClaw-main/benchmark/tests/: __init__.py  test_check.py  (+3 more)
(+4188 files in other folders)
