[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaclaw-bench"
version = "0.2.0"
description = "MetaClaw Evolution Benchmark utilities"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
metaclaw-bench = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
