[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaclaw-memory-sidecar"
version = "0.1.0"
description = "FastAPI HTTP sidecar for the MetaClaw Memory system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]

[project.scripts]
metaclaw-memory-sidecar = "metaclaw_memory_sidecar.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["metaclaw_memory_sidecar*", "metaclaw*"]
